Igor_Romacnhyk-hw_1--GIT

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     </div>
                     <nav class="header__nav">
                         <ul class="header__list">
-                            <li class="header__item"><a href="#">Features</a></li>
-                            <li class="header__item"><a href="#">Works</a></li>
-                            <li class="header__item"><a href="#">Our Team</a></li>
-                            <li class="header__item"><a href="#">Testimonials</a></li>
-                            <li class="header__item"><a href="#">Download</a></li>
+                            <li class="header__item"><a href="#features__wrapper">Features</a></li>
+                            <li class="header__item"><a href="#photo__body">Works</a></li>
+                            <li class="header__item"><a href="#collective__body">Our Team</a></li>
+                            <li class="header__item"><a href="#quote__body">Testimonials</a></li>
+                            <li class="header__item"><a href="#download__wrapper">Download</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -45,7 +45,7 @@
         </header>
         <section class="features">
             <div class="container">
-                <div class="features__wrapper">
+                <div id="features__wrapper">
                     <div class="features__card">
                         <div class="features__icon">
                             <img class="features__img" src="/img/pencil.png" alt="pencil">
@@ -92,7 +92,7 @@
             </div>
         </section>
         <section class="photo">
-            <div class="photo__body">
+            <div id="photo__body">
                 <div class="photo__item">
                     <img src="/img/photo1.png" alt="">
                     <div class="photo__text">
@@ -153,7 +153,7 @@
         </section>
         <section class="collective">
             <div class="container">
-                <div class="collective__body">
+                <div id="collective__body">
                     <div class="collective__wrapper">
                         <div class="collective__card">
                             <img class="collective__img" src="/img/collective1.png" alt="">
@@ -230,7 +230,7 @@
             </div>
         </section>    
         <section class="quote">
-            <div class="quote__body">
+            <div id="quote__body">
                 <div class="quote__img">
                     <img src="/img/girl.png" alt="">
                 </div>
@@ -261,7 +261,7 @@
         </section>
         <section class="download">
             <div class="container">
-                <div class="download__wrapper">
+                <div id="download__wrapper">
                     <p class="download__text">
                         Are You Ready to Start? Download Now For Free!
                     </p>
